--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ro">
 <head>
     <meta charset="UTF-8">
-    <title>Cultura Managerială – Tanulóprogram</title>
+    <title>Cultura Managerială – Program de învățare</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,3 +25,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
