--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Cultura Managerială – Tanulóprogram</h1>
+    <h1>Cultura Managerială – Program de învățare</h1>
 
     <!-- 1. Téma lista -->
     <div id="tema-list" class="screen">
@@ -25,4 +25,5 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
