--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div id="tema-list" class="screen">
             <div id="teme">
                 </div>
+            <button id="finalTestBtn">Test Final (30 întrebări)</button>
         </div>
 
         <div id="question-screen" class="screen" style="display:none;">
@@ -31,3 +32,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
