--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         </div>
 
         <div id="question-screen" class="screen" style="display:none;">
+            <p id="progress"></p>
+            
             <p id="question"></p>
             
             <div id="answers">
@@ -32,4 +34,5 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
