--- a/index.html
+++ b/index.html
@@ -30,9 +30,16 @@
         </div>
         
     </div>
-    
+    <div id="resultModal" class="modal" style="display:none;">
+        <div class="modal-content">
+            <h2 id="modalTitle">Felicitări!</h2>
+            <p id="modalBody"></p>
+            <button id="modalCloseBtn">OK</button>
+        </div>
+    </div>    
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
